# get_music_data-python

./: .gitignore  README.md  config.py  config.toml  data.json  gemini.py  getMusicData.py  main.py  main.spec  pyproject.toml  setConfig.py  utils.py  wget-log
app/backend/services/: folderDataManager.py  gemini.py  getMusicData.py
app/backend/utils/: processManager.py  utils.py
app/config/: config.py  data.py  language_settings.py  set_config.py
app/interface/: app.py  events.py  root.py  router.py
app/interface/components/: icons.py
app/interface/views/: config_view.py  folder_list_view.py  loading_view.py  main_menu_view.py  process_manager_view.py  result_list_view.py  saved_processes_view.py
config/: config.py  data.py  laguageSettings.py  setConfig.py
interface/: app.py  configFrame.py  container.py  fileContainer.py  icons.py  interface.py  listContainer.py  processContainer.py  processFrame.py  progressBar.py  root.py
interface/buttons/: _btn.py  applyChangesBtn.py  btn.py  closeFolderBtn.py  configBtn.py  getDataBtn.py  resumeBtn.py  retryBtn.py  saveBtn.py  selectFolderBtn.py  sliderFrame.py  switchBtn.py  textInput.py  themeToggleBtn.py
interface/inputs/: optionsInput.py  sliderFrame.py  switchBtn.py  textInput.py
interface/widgets/: batchSliderFrame.py  configFrame.py  folderList.py  headers.py  headersFrame.py  icons.py  listContainer.py  listFrame.py  loadingProcessFrame.py  processFrame.py  processManagerFrame.py  progressBar.py  resultList.py
locales/: messages.pot
utils/: folderDataManager.py  gemini.py  getMusicData.py  utils.py
(+37 files in other folders)
